--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+  <head>
+    <title>Projects Overview</title>
+  </head>
+  <body>
+    <span>Online Tic Tac Toe</span>
+    <span>Game Show Buzzer</span>
+    <span>Kinematic Arm</span>
+  </body>
 </html>
