--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Projects Overview</title>
   </head>
   <body>
-    <span>Online Tic Tac Toe</span>
+    <span href="/tic-tac-toe-online/">Online Tic Tac Toe</span>
     <span>Game Show Buzzer</span>
     <span>Kinematic Arm</span>
   </body>
