--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Projects Overview</title>
   </head>
   <body>
-    <span onclick="window.href=='/tic-tac-toe-online/'">Online Tic Tac Toe</span>
+    <span onclick="window.href='/tic-tac-toe-online/'">Online Tic Tac Toe</span>
     <br/>
     <span>Game Show Buzzer</span>
     <br/>
