--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
   <head>
     <title>Projects Overview</title>
+    <style>
+      span {
+        color: blue;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <span onclick="window.location.href='/tic-tac-toe-online/'">Online Tic Tac Toe</span>
     <br/>
-    <span>Game Show Buzzer</span>
+    <span onclick="window.location.href='/gsb/'">Game Show Buzzer</span>
     <br/>
-    <span>Kinematic Arm</span>
+    <span onclick="window.location.href='/kinematic-arm/'">Kinematic Arm</span>
   </body>
 </html>
