--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
   <head>
     <title>Projects Overview</title>
     <style>
-      span {
+      li {
         color: blue;
         cursor: pointer;
       }
     </style>
   </head>
   <body>
-    <span onclick="window.location.href='/tic-tac-toe-online/'">Online Tic Tac Toe</span>
-    <br/>
-    <span onclick="window.location.href='/gsb/'">Game Show Buzzer</span>
-    <br/>
-    <span onclick="window.location.href='/kinematic-arm/'">Kinematic Arm</span>
+    <ul>
+      <li onclick="window.location.href='/tic-tac-toe-online/'">Online Tic Tac Toe</li>
+      <li onclick="window.location.href='/gsb/'">Game Show Buzzer</li>
+      <li onclick="window.location.href='/kinematic-arm/'">Kinematic Arm</li>
   </body>
 </html>
