--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </style>
   </head>
   <body>
+    <h1>Web Projects</h1>
     <ul>
       <li onclick="window.location.href='/tic-tac-toe-online/'">Online Tic Tac Toe</li>
       <li onclick="window.location.href='/gsb/'">Game Show Buzzer</li>
