--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li onclick="window.location.href='/gsb/'">Game Show Buzzer</li>
       <li onclick="window.location.href='/kinematic-arm/'">Kinematic Arm</li>
       <li onclick="window.location.href='/tetrisBot-2.0/'">Tetris Bot</li>
+      <li onclick="window.location.href='/raycasting-simulation/'">Raycasting Simulation</li>
     </ul>
   </body>
 </html>
