--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Projects Overview</title>
+    <link rel="icon" type="image/png" href="/favicon.png"/>
     <style>
       li {
         color: blue;
