--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Projects Overview</title>
-    <link rel="icon" type="image/png" href="/favicon.png"/>
+    <link rel="icon" href="/favicon.ico"/>
     <style>
       li {
         color: blue;
