--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li onclick="window.location.href='/kinematic-arm/'">Kinematic Arm</li>
       <li onclick="window.location.href='/tetrisBot-2.0/'">Tetris Bot</li>
       <li onclick="window.location.href='/raycasting-simulation/'">Raycasting Simulation</li>
+      <li onclick="window.location.href='/Master-Mind-Solver-2.0/'">Master Mind Solver</li>
     </ul>
   </body>
 </html>
